tests/requests/reports/snapshots/reports/can_generate_one@categories.snap
---
source: tests/requests/reports/category.rs
assertion_line: 49
expression: "(request.status_code(), request.json::<SpecieSummary>())"
---
(
    201,
    SpecieSummary {
        specie_name: "cattle",
        pid: PID,
        organisation_pid: PID,
        id: ID
        specie_id: ID
        total: 11,
        males: 3,
        females: 8,
        unknown_gender: 0,
        active: 10,
        transferred: 0,
        sold: 1,
        deceased: 0,
        average_age_months: Some(
            24.45,
        ),
        average_weight_male: Some(
            817.08,
        ),
        average_weight_female: Some(
            341.41,
        ),
        total_purchase_value: 451000.00,
        last_calculated_at: DATE,
        created_at: DATE,
        updated_at: DATE,
    },
)
